assets/src/user/slides.less
.slide {
	&#slide1,
	&#slide2,
	&#slide3,
	&#slide4,
	&#slide5 {
		color: @white;
		a {
			color: @white;
		}
	}
	// Backgrounds
	&#slide1 {
		// background: @color-one;
		background-image: url('../img/testing.png');
		background-size: cover;
		background-repeat: no-repeat;
		background-position-y: 45%;
		background-attachment: fixed;
		// background-color: @color-one;
		min-height: 80vh;
		position: relative;
		@media (max-width: @screen-sm-max){
			height: auto;
		}
		.container {
			padding-top: @navbar-height;
			@media(min-width: @screen-sm-max){
				position: absolute;
				bottom: 60%;
				left: 0;
				right: 0;
				top:15%;
			}
		}
	}
	&#slide2 {
		background: @color-one;
		padding: 25px 0;
		img {
			width: 100%;
			@media(max-width: @screen-xs-max){
				max-width: 500px;
				display: block;
				margin: 0 auto;
			}
		}
	}
	&#slide3 {
		background: @color-two;
		display: table;
		.screenshots {
			margin-left: -15px;
			margin-right: -15px;
			.overlay {
				display: none;
				@media(min-width: @screen-sm-min) {
					position: absolute;
					display: block;
					background: rgba(0,0,0,0.5);
					transition: all .4s ease;
					z-index: 1;
					top: 0;
					bottom: 0;
					left: 0;
					right: 0;
				}
			}
			.shot {
				width: 33.33333%;
				float: left;
				position: relative;
				@media(min-width: @screen-sm-min) {
					border: 1px solid rgba(0,0,0,0.7);
				}
				@media(max-width: @screen-xs-max) {
					width: 100%;
					padding: 15px 15px;
				}
				&:hover {
					.overlay {
						background: rgba(0,0,0,0.5);
						transition: all .4s ease;
						display: none;
						position: initial;
						z-index: 1;
					}
				}
			}

		}
		.work-preview {
			max-width: 100%;
		}
		a {
			@media(min-width: @screen-sm-min) {
				color: @color-one;
				&:focus, &:active, &:hover {
					color: darken(@color-one, 10%);
				}
			}
			font-weight: 700;
			position: relative;
			display: block;
			overflow: hidden;
			&:focus, &:active, &:hover {
				.work-title {
					bottom: 0;
					transition: bottom .4s ease;
				}
			}
			@media(min-width: @screen-sm-min) {
				.work-title {
					position: absolute;
					bottom: -100%;
					left: 0;
					right: 0;
					background-color: rgba(0,0,0,0.5);
					margin: 0;
					display: block;
					padding: 15px 30px 15px 30px;
					color: @white;
					font-weight: 700;
					transition: bottom .4s ease;
				}
			}
		}
	}
	&#slide4 {
		padding: 25px 0;
		background: @color-three;
		.container {
			position: relative;
			h3.no-top-marg {
				@media(max-width: @screen-xs-max) {
					margin: 0;
				}
			}
			.row p.visible-xs {
				margin-bottom: 0;
			}
			.row.hidden-xs p {}
		}
		.progress {
			@media(min-width: @screen-sm-min){
				margin-bottom: 0;
			}
			.progress-bar {
				background-color: @color-one;
				width: 0;
			}
		}
		&.show-progress {
			.progress-bar {
			 	&#html-sk {
					width: 100%;
				}
				&#css-sk {
					width: 100%;
				}
				&#twig-sk {
					width: 80%;
				}
				&#js-sk {
					width: 70%;
				}
				&#php-sk {
					width: 65%;
				}
				&#grail-sk {
					width: 50%;
				}
				&#groov-sk {
					width: 80%;
				}
				&#c-sk {
					width: 79%;
				}
				&#pyth-sk {
					width: 50%;
				}
				&#sf-sk {
					width: 50%;
				}
			}
		}
	}
	&#slide5 {
		background: @color-four;
		padding: 25px 0;
		a {
			color: @white;
			.fa-stack-2x {
				color: transparent;
				transition: all .3s ease;
			}
			&:hover {
				.fa-stack-2x {
					color: @white;
					transition: all .4s ease;
				}
				&#facebook {
					color: @color-facebook;
				}
				&#email {
					color: @color-email;
				}
				&#linkedin {
					color: @color-linkedin;
				}
				&#resume {
					color: @color-resume;
				}
			}
		}
	}
}

